Design website with tailwind, Make use of easyadmin

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body {
-    background-color: lightgray;
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+h2 {
+  font-family: 'Abril Fatface', cursive;
+}
+
+li.relative.group.submenu-item {
+  span {
+    cursor: pointer;
+  }
 }
